--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "css-loader": "^0.23.1",
     "es5-shim": "^4.5.7",
     "expose-loader": "^0.7.1",
+    "flux": "^2.1.1",
     "imports-loader": "^0.6.5",
     "jquery": "^2.2.2",
     "jquery-ujs": "^1.2.1",
