--- a/package.json
+++ b/package.json
@@ -1,17 +1,25 @@
 {
-  "name": "react-webpack-rails-tutorial",
+  "name": "Probuda",
   "version": "0.0.1",
   "engines": {
     "node": "5.10.0",
     "npm": "3.5.0"
   },
   "scripts": {
-    "postinstall": "cd client && npm install",
     "rails-server": "echo 'visit http://localhost:3000/hello_world' && foreman start -f Procfile.dev",
+    "postinstall": "cd ./client && npm install",
+    "gulp": "cd ./client && npm run gulp",
+    "test": "npm run build:test && npm run lint && rspec",
+    "lint": "cd client && npm run lint",
+    "install-react-on-rails": "cd client && npm run install-react-on-rails",
+    "build:clean": "rm app/assets/webpack/* || true",
     "build:production:client": "(cd client && npm run build:production:client --silent)",
+    "build:production:server": "(cd client && npm run build:production:server --silent)",
     "build:client": "(cd client && npm run build:client --silent",
+    "build:server": "(cd client && npm run build:server --silent)",
     "build:dev:client": "(cd client && npm run build:dev:client --silent)",
-    "test": "rspec"
+    "build:dev:server": "(cd client && npm run build:dev:server --silent)",
+    "hot-assets": "(cd client && npm run hot-assets)"
   },
   "dependencies": {
     "bootstrap-sass-loader": "^1.0.10",
@@ -26,8 +34,12 @@
   },
   "devDependencies": {
     "babel-plugin-react-html-attrs": "^2.0.0",
+    "babel-eslint": "^5.0.0-beta6",
     "bootstrap": "^3.3.6",
     "css-loader": "^0.23.1",
+    "eslint": "^1.10.3",
+    "eslint-config-airbnb": "^3.1.0",
+    "eslint-config-shakacode": "0.0.1",
     "jquery": "^2.2.4",
     "resolve-url-loader": "^1.4.3",
     "sass-loader": "^3.2.0",
